# spirv-assembler

./: .gitignore  Cargo.toml  test.ps1  test.sh
asm/: glslbasetextoverlay.frag.s  glslbaseuioverlay.vert.s  glslbloomcolorpass.frag.s  glslbloomcolorpass.vert.s  glslbloomgaussblur.frag.s  glslbloomphongpass.frag.s  glslbloomphongpass.vert.s  glslbloomskybox.vert.s  glslcomputeclothcloth.comp.s  glslcomputeclothcloth.frag.s  glslcomputeclothcloth.vert.s  glslcomputeclothsphere.frag.s  glslcomputeclothsphere.vert.s  glslcomputecullandlodcull.comp.s  glslcomputecullandlodindirectdraw.frag.s  glslcomputecullandlodindirectdraw.vert.s  glslcomputeheadlessheadless.comp.s  glslcomputenbodyparticle.frag.s  glslcomputenbodyparticle_calculate.comp.s  glslcomputenbodyparticle_integrate.comp.s  glslcomputeparticlesparticle.comp.s  glslcomputeparticlesparticle.frag.s  glslcomputeparticlesparticle.vert.s  glslcomputeraytracingraytracing.comp.s  glslcomputeraytracingtexture.frag.s  glslcomputeraytracingtexture.vert.s  glslcomputeshaderedgedetect.comp.s  glslcomputeshaderemboss.comp.s  glslcomputeshadersharpen.comp.s  glslcomputeshadertexture.vert.s  glslconditionalrendermodel.vert.s  glslconservativerastertriangle.frag.s  glslconservativerastertriangleoverlay.frag.s  glsldebugmarkercolorpass.vert.s  glsldebugmarkerpostprocess.frag.s  glsldebugmarkerpostprocess.vert.s  glsldebugmarkertoon.frag.s  glsldebugmarkertoon.vert.s  glsldeferreddeferred.frag.s  glsldeferredmrt.frag.s  (+179 more)
src/: build.rs  glsl450.rs  grammar.pest  lib.rs  main.rs  opcode.rs  opencl100.rs  spirv.core.grammar.json  (+1 more)
(+143 files in other folders)
