[package]
name = "spirvasm"
version = "0.1.0"
authors = ["Atil Kurtulmus <LoST_94@msn.com>"]
edition = "2018"
build = "src/build.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fxhash = "^0"
pest = "2.1.3"
pest_derive = "2.1.0"


[build-dependencies]
fxhash = "^0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
